# memorydb

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/plans/: 2026-02-18-memorydb-design.md  2026-02-18-memorydb-implementation.md
mcp-server/: server.py
memory-memorydb/: README.md  index.ts  openclaw.plugin.json
openclaw-plugin/: README.md  package.json
scripts/: ingest_openclaw.py  init_db.sql
src/: config.py  main.py
src/api/: containers.py  documents.py  health.py  memories.py  profile.py  search.py  stats.py
src/engine/: extraction.py  graph.py  pipeline.py  profile.py  search.py  storage.py
src/engine/chunkers/: __init__.py  code.py  text.py  transcript.py
src/engine/extractors/: __init__.py  audio.py  code.py  image.py  pdf.py  structured.py  text.py  url.py
src/engine/providers/: anthropic_provider.py  embedding.py  llm.py  ollama_provider.py  openai_provider.py
src/models/: document.py  memory.py  profile.py  search.py
src/utils/: db.py  logger.py  url_validation.py
tests/: conftest.py  test_chunkers.py  test_config.py  test_extraction.py  test_extractors.py  test_graph.py  test_health.py  test_models.py  test_providers.py
