[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memorydb"
version = "0.1.0"
description = "Self-hosted AI agent memory system"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
extractors = [
    "trafilatura>=2.0.0",
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "tree-sitter>=0.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
]
local = [
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
